--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,5 @@
   font-family: "Raleway-Light";
   src: url(../public/assets/fonts/Raleway-Light.ttf);
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
