--- a/src/btn.scss
+++ b/src/btn.scss
@@ -1,50 +1,19 @@
 .button-custom {
   background-color: transparent;
   color: white;
-  padding: 3px 6px;
+  padding: 6px 12px;
   font-size: 16px;
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 1px;
 }
-
-// .button-custom span {
-//   position: relative;
-//   z-index: 1;
-// }
-
-// .button-custom::before {
-//   content: attr(data-text);
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   color: orange;
-//   overflow: hidden;
-//   white-space: nowrap;
-//   z-index: 2;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   clip-path: polygon(0 0, 0 100%, 0 100%, 0 0);
-//   transition: clip-path 0.5s;
-// }
-
-// .button-custom:hover::before {
-//   clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
-// }
 
 .button-custom .bottom-border,
 .button-custom .right-border,
 .button-custom .top-border,
 .button-custom .left-border {
   position: absolute;
-  background-color: white;
+  background-color: orange;
   opacity: 0;
 }
 
