--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,7 @@
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
