--- a/src/btn.scss
+++ b/src/btn.scss
@@ -5,6 +5,7 @@
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  border-radius: 4px;
 }
 
 .button-custom .bottom-border,
@@ -19,7 +20,7 @@
 .button-custom .bottom-border {
   bottom: 0;
   left: -100%;
-  height: 2px;
+  height: 3px;
   width: 100%;
 }
 
@@ -27,13 +28,13 @@
   top: 100%;
   right: 0;
   height: 100%;
-  width: 2px;
+  width: 3px;
 }
 
 .button-custom .top-border {
   top: 0;
   left: 100%;
-  height: 2px;
+  height: 3px;
   width: 100%;
 }
 
@@ -41,7 +42,7 @@
   top: -100%;
   left: 0;
   height: 100%;
-  width: 2px;
+  width: 3px;
 }
 
 .button-custom:hover .bottom-border {
