--- a/src/components/shoppingCart/shoppingCart.scss
+++ b/src/components/shoppingCart/shoppingCart.scss
@@ -1,3 +1,10 @@
+.cart-spacing:hover {
+  .cart-counter {
+    background-color: #f97316;
+    color: #fed7aa;
+  }
+}
+
 .cart-counter {
 
   position: absolute;
