--- a/src/btn.scss
+++ b/src/btn.scss
@@ -5,7 +5,7 @@
   cursor: pointer;
   position: relative;
   overflow: hidden;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .button-custom .bottom-border,
@@ -13,7 +13,7 @@
 .button-custom .top-border,
 .button-custom .left-border {
   position: absolute;
-  background-color: orange;
+  background-color: #c2410c;
   opacity: 0;
 }
 
