--- a/src/screens/homeScreen/homeScreen.scss
+++ b/src/screens/homeScreen/homeScreen.scss
@@ -13,3 +13,8 @@
 .scrollable-section::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+// .scrollable-section {
+//   scrollbar-color: #888 #f1f1f1;
+//   scrollbar-width: thin;
+// }
