--- a/src/components/contextSettings/contextSettings.scss
+++ b/src/components/contextSettings/contextSettings.scss
@@ -3,7 +3,7 @@
     position: relative;
     display: inline-block;
     width: 30px;
-    height: 17px;
+    height: 16px;
 }
 
 /* Hide default HTML checkbox */
@@ -29,22 +29,32 @@
 .slider:before {
     position: absolute;
     content: "";
-    height: 13px;
-    width: 13px;
-    left: 2px;
-    bottom: 2px;
+    height: 11px;
+    width: 11px;
+    top: 3px;
+    left: 3px;
+    bottom: 3px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
 }
 
-input:checked+.slider {
-    background-color: orange;
+#darkTheme:checked+.slider {
+    background-color: #f97316;
 }
 
-input:focus+.slider {
-    box-shadow: 0 0 1px orange;
+#darkTheme:focus+.slider {
+    box-shadow: 0 0 1px #f97316;
 }
+
+#thaiTheme:checked+.slider {
+    background-color: #ca2440;
+}
+
+#thaiTheme:focus+.slider {
+    box-shadow: 0 0 1px #ca2440;
+}
+
 
 input:checked+.slider:before {
     -webkit-transform: translateX(13px);
